# my-first-project

./: .env.template  .gitattributes  .gitignore  Dockerfile  README.md  SRS.md  deploy.sh  docker-compose.yml  readme.md
backend/: .env  .env.example  admin_access.py  audit.py  auth.py  config.py  database.py  device_code_utils.py  form_templates.py  main.py  models.py  pyproject.toml  routes_audit.py  routes_auth.py  routes_dashboard.py  routes_devices.py  routes_dict.py  routes_usage.py  routes_users.py  routes_wecom.py  run.py  run_migrate_admin_login.py  run_migrate_device_code.py  run_migrate_device_soft_delete.py  run_migrate_dict_code_to_int.py  run_migrate_usage_maintenance.py  run_migrate_usage_soft_delete.py  run_seed_dict.py  schemas.py  start_h5_dev.py  start_local.py  time_utils.py
backend/static/: docs-theme.css
backend/static/fonts/: README.txt
backend/templates/: admin.html  my_records.html  scan.html
backend/tests/: __init__.py  conftest.py  test_audit.py  test_auth.py  test_devices.py  test_devices_validation.py  test_dict.py  test_full_site.py  test_health.py  test_pages.py  test_performance_basic.py  test_usage.py  test_users.py
docs/: AI_COMMUNICATION_KNOWLEDGE_BASE.md  CHANGELOG_2026-02-13.md  CODE_REVIEW_REPORT.md  COMMIT_UTF8.md  DATABASE_CHOICE_EVALUATION.md  DB_MIGRATION_ADMIN_LOGIN.md  DEMO_SCRIPT.md  DEPLOYMENT.md  DEPLOY_DATABASE.md  FORM_TEMPLATES_AND_EXTENSIONS.md  FULLSTACK_AUDIT_REPORT.md  FULL_SITE_CHECK_REPORT.md  H5_DEV_TEST.md  PRODUCTION_DOCKER.md  README.md  REGISTRANT_LOGIC.md  SCALING_AND_INDEXES.md  SYSTEM_OVERVIEW.md  (+7 more)
(+3 files in other folders)
